nginx/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    spec:
      containers:
      - name: nginx
        image: service/nginx
        ports:
          - containerPort: 80
      - name: redis
        image: service/redis
