nginx/kustomize/base/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route
  annotations:
    kubernetes.io/ingress.class: "traefik-ext-dev"
spec:
  routes:
  - kind: Rule
    match: Host(`nginx.local`)
    priority: 10
    services:
    - kind: Service
      name: nginx-svc
      namespace: default
      passHostHeader: true
      port: 80
      responseForwarding:
        flushInterval: 1ms
      scheme: http
      strategy: RoundRobin
      weight: 10
